Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt Creator
QTCREATORBUG-18189
Crash in 4.3 RC1 when opening options for the second time
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P1: Critical
Fix Version/s:
Qt Creator 4.3.0
Affects Version/s:
Qt Creator 4.3.0-rc1
Component/s:
Debugger
Labels:
None
Commits:
69521da36e21795aa0d115f3b6cf53d7a499b013
Description
Attachments
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
creator-crash.gif
1005 kB
11 May '17 08:13
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
hjk
Reporter:
Mitch Curtis
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
11 May '17 08:13
Updated:
12 May '17 12:41
Resolved:
12 May '17 12:41
Gerrit Reviews
There are no open Gerrit changes
Show
There is 1 closed Gerrit change
Hide
There is 1 closed Gerrit change
Debugger: Fix crash on second options opening
Gerrit Review: